pipeline works (just missing passing retrieved info to llm for contextual response

--- a/pipeline/openai.ipynb
+++ b/pipeline/openai.ipynb
@@ -290,48 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "source: resume.pdf\n",
-      "page number: 0\n",
-      "\n",
-      "text: Abi Kakolla\n",
-      "Toronto, ON | 647-957-7403 | kakolla@usc.edu | linkedin.com/in/kakolla | kakolla.com\n",
-      "Education\n",
-      "University of Southern California Los Angeles, CA\n",
-      "Bachelor of Science in Computer Science (GPA: 3.71) Aug 2023 – Dec 2026\n",
-      "Hackathons: HackHarvard (Harvard), LAHacks (UCLA), HackSC (USC), CalHacks (Berkeley)\n",
-      "Experience\n",
-      "Machine Learning Researcher Aug 2023 – Present\n",
-      "USC Center for Neural Engineering Los Angeles, CA\n",
-      "• Modeled in-silico layers of the Hippocampus used to generate a dendritic tree as part of a neural network using\n",
-      "MeshLab and Python\n",
-      "• Developed open-source software to grid a dataset of 6 million neural points that enhanced the neural mesh model\n",
-      "resolution by 348%, enabling other teams to create more accurate models and save on computational costs\n",
-      "• Reduced neural network generation by 75% by integrating unsupervised machine learning algorithms, enabling\n",
-      "faster simulations\n"
+      "as table sugar) is another disaccharide composed of fructose and glucose and is very \n",
+      "similar to lac...\n"
      ]
     }
    ],
    "source": [
-    "query = \"where were the hackathons? by abi kakolla?\"\n",
+    "query = \"what is hydrolysis?\"\n",
     "vector_retriever.search_kwargs = {\"k\": 1} # change k value later (depends on length of context)\n",
     "results = vector_retriever.invoke(query)\n",
     "\n",
     "# print(len(results))\n",
-    "for doc in results:\n",
-    "    print(doc.id)\n",
-    "    print(\"source: \" + doc.metadata['source'])\n",
-    "    print(\"page number: \" + str(doc.metadata['page_number']))\n",
-    "    print(doc.page_content)\n",
+    "# for doc in results:\n",
+    "#     print(doc.id)\n",
+    "#     print(\"source: \" + doc.metadata['source'])\n",
+    "#     print(\"page number: \" + str(doc.metadata['page_number']))\n",
+    "#     print(doc.page_content)\n",
     "\n",
-    "# print(results[0].metadata['text_preview'])"
+    "print(results[0].metadata['text_preview'])"
    ]
   },
   {
@@ -343,31 +326,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'Concept1': {'id': 'Machine Learning Researcher'},\n",
-       "  'Relationship': {'type': 'WORKS_AT'},\n",
-       "  'Concept2': {'id': 'USC Center for Neural Engineering'}},\n",
-       " {'Concept1': {'id': 'Abi Kakolla'},\n",
-       "  'Relationship': {'type': 'WORKS_AS'},\n",
-       "  'Concept2': {'id': 'Machine Learning Researcher'}},\n",
-       " {'Concept1': {'id': 'Abi Kakolla'},\n",
-       "  'Relationship': {'type': 'EDUCATION_AT'},\n",
-       "  'Concept2': {'id': 'University of Southern California'}}]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "MATCH (x)<-[r]-(p)-[]-(d:Document)\n",
+      "WHERE d.text_preview = \"as table sugar) is another disaccharide composed of fructose and glucose and is very \n",
+      "similar to lac...\" AND NOT p:Document AND NOT x:Document\n",
+      "RETURN p,r,x\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "retrieved_text_preview = results[0].metadata['text_preview']\n",
     "\n",
+    "# this prompt gets the subgraph (cypher query)\n",
+    "subgraph_cypher_query = \"\"\"\n",
+    "MATCH (x)<-[r]-(p)-[]-(d:Document)\n",
+    "WHERE d.text_preview = \\\"\"\"\" + retrieved_text_preview + \"\"\"\\\" AND NOT p:Document AND NOT x:Document\n",
+    "RETURN p,r,x\n",
+    "\n",
+    "\"\"\"\n",
+    "print(subgraph_cypher_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Concept1': {'id': 'lactase'},\n",
+       "  'Relationship': {'type': 'USED_IN'},\n",
+       "  'Concept2': {'id': 'experiment'}},\n",
+       " {'Concept1': {'id': 'lactase'},\n",
+       "  'Relationship': {'type': 'RECOGNIZES'},\n",
+       "  'Concept2': {'id': 'lactose'}},\n",
+       " {'Concept1': {'id': 'lactase'},\n",
+       "  'Relationship': {'type': 'AFFECTED_BY'},\n",
+       "  'Concept2': {'id': 'boiled'}},\n",
+       " {'Concept1': {'id': 'lactase'},\n",
+       "  'Relationship': {'type': 'INTERACTS_WITH'},\n",
+       "  'Concept2': {'id': 'lactose'}},\n",
+       " {'Concept1': {'id': 'lactase'},\n",
+       "  'Relationship': {'type': 'CLEAVES_INTO'},\n",
+       "  'Concept2': {'id': 'glucose'}},\n",
+       " {'Concept1': {'id': 'lactase'},\n",
+       "  'Relationship': {'type': 'CLEAVES_INTO'},\n",
+       "  'Concept2': {'id': 'galactose'}},\n",
+       " {'Concept1': {'id': 'lactose'},\n",
+       "  'Relationship': {'type': 'BROKEN_DOWN_BY'},\n",
+       "  'Concept2': {'id': 'lactase'}},\n",
+       " {'Concept1': {'id': 'lactose'},\n",
+       "  'Relationship': {'type': 'CAUSES'},\n",
+       "  'Concept2': {'id': 'lactose intolerance'}},\n",
+       " {'Concept1': {'id': 'lactose'},\n",
+       "  'Relationship': {'type': 'DIGESTED_INTO'},\n",
+       "  'Concept2': {'id': 'glucose'}},\n",
+       " {'Concept1': {'id': 'lactose'},\n",
+       "  'Relationship': {'type': 'DIGESTED_INTO'},\n",
+       "  'Concept2': {'id': 'galactose'}}]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# this prompt gets JSON in a very specific format that explains Concept1 --> Relationship --> Concept2\n",
     "prompt_query = \"\"\"\n",
     "MATCH (x)<-[r]-(p)-[]-(d:Document)\n",
     "WHERE d.text_preview = \\\"\"\"\" + retrieved_text_preview + \"\"\"\\\" AND NOT p:Document AND NOT x:Document\n",
@@ -376,190 +412,6 @@
     "  {id: x.id} AS Concept2\n",
     "\"\"\"\n",
     "graph.query(prompt_query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\abhis\\AppData\\Local\\Temp\\ipykernel_24788\\2915115492.py:16: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  entity_chain = LLMChain(prompt=prompt, llm=llm)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# import openai\n",
-    "# from langchain.prompts import ChatPromptTemplate\n",
-    "# from langchain.llms import OpenAI\n",
-    "# from pydantic import BaseModel, Field\n",
-    "# from langchain.chains import LLMChain\n",
-    "\n",
-    "# # Define a prompt to extract entities from the input query\n",
-    "# prompt = ChatPromptTemplate.from_messages([ \n",
-    "#     (\"system\", \"Extract concepts and idea entities from the text.\"),\n",
-    "#     (\"human\", \"Extract entities from: {question}\")\n",
-    "# ])\n",
-    "# # Initialize the OpenAI model for entity extraction\n",
-    "# llm = ChatOpenAI(model=\"gpt-3.5-turbo\")  \n",
-    "\n",
-    "# # Combine the prompt and OpenAI model to create an entity extraction chain\n",
-    "# entity_chain = LLMChain(prompt=prompt, llm=llm)\n",
-    "# def graph_retriever(question: str) -> str:\n",
-    "#     global entity_chain\n",
-    "#     # Define a model for the extracted entities from the text\n",
-    "#     class Entities(BaseModel):\n",
-    "#         names: list[str] = Field(..., description=\"All entities from the text\")\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "#     # Use the entity extraction chain to get entities from the question\n",
-    "#     response = entity_chain.run({\"question\": question})\n",
-    "\n",
-    "#     # Assuming response is structured as {'names': ['Person A', 'Organization B']}\n",
-    "#     entities = response.get(\"names\", [])\n",
-    "#     print(\"Retrieved Entities:\")\n",
-    "#     print(entities)\n",
-    "    \n",
-    "#     result = \"\"  # Initialize a variable to store the result\n",
-    "\n",
-    "#     # Iterate over each extracted entity and query Neo4j for relationships\n",
-    "#     for entity in entities:\n",
-    "#         query_response = graph.query(\n",
-    "#             \"\"\"MATCH (p:__Entity__ {id: $entity})-[r]->(e)\n",
-    "#             RETURN p.id AS source_id, type(r) AS relationship, e.id AS target_id\n",
-    "#             LIMIT 50\"\"\",\n",
-    "#             {\"entity\": entity}\n",
-    "#         )\n",
-    "#         # Format the query results and append to the result string\n",
-    "#         result += \"\\n\".join([f\"{el['source_id']} - {el['relationship']} -> {el['target_id']}\" for el in query_response])\n",
-    "\n",
-    "#     # Return the formatted results containing entity relationships\n",
-    "#     return result\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from langchain_core.runnables import RunnablePassthrough\n",
-    "# from langchain_core.output_parsers import StrOutputParser\n",
-    "\n",
-    "# from langchain.chat_models import ChatOpenAI\n",
-    "\n",
-    "# def querying_ollama(question):\n",
-    "#     global entity_chain\n",
-    "#     # Define a function that combines data retrieved from both Neo4j and vector embeddings\n",
-    "#     def full_retriever(question: str):\n",
-    "#         # Retrieve graph data for the question using the graph_retriever function\n",
-    "#         graph_data = graph_retriever(question)\n",
-    "#         print(\"Graph Data\")\n",
-    "#         print(graph_data)\n",
-    "        \n",
-    "#         # Retrieve vector data by invoking the vector retriever with the question\n",
-    "#         vector_data = [el.page_content for el in vector_retriever.invoke(question)]\n",
-    "        \n",
-    "#         # Combine the graph data and vector data into a formatted string\n",
-    "#         return f\"Graph data: {graph_data}\\nVector data: {'#Document '.join(vector_data)}\"\n",
-    "\n",
-    "#     # Define a prompt template for generating a response based on context\n",
-    "#     template = \"\"\"Answer the question based only on the following context:\n",
-    "#     {context}\n",
-    "#     Question: {question}\n",
-    "#     Answer:\"\"\"\n",
-    "    \n",
-    "#     # Create a prompt from the template, which takes the context and question as input\n",
-    "#     prompt = ChatPromptTemplate.from_template(template)\n",
-    "    \n",
-    "#     # Initialize the ChatOpenAI model (you can use your preferred model here)\n",
-    "#     llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)  # Use ChatOpenAI for chat models\n",
-    "\n",
-    "#     # Create a processing chain that:\n",
-    "#     # 1. Generates context using the full_retriever function\n",
-    "#     # 2. Passes through the question as-is using RunnablePassthrough\n",
-    "#     # 3. Applies the prompt template to generate the final question\n",
-    "#     # 4. Uses the LLM (language model) to generate the answer\n",
-    "#     # 5. Uses StrOutputParser to format the output as a string\n",
-    "#     chain = (\n",
-    "#         {\n",
-    "#             \"context\": lambda input: full_retriever(input),  # Generate context from the question\n",
-    "#             \"question\": RunnablePassthrough(),  # Pass the question through without modification\n",
-    "#         }\n",
-    "#         | prompt  # Apply the prompt template\n",
-    "#         | llm  # Use the language model to answer the question based on context\n",
-    "#         | StrOutputParser()  # Parse the model's response as a string\n",
-    "#     )\n",
-    "\n",
-    "#     # Call the chain to get the response\n",
-    "#     import json\n",
-    "\n",
-    "#     response = entity_chain.run({\"question\": question})\n",
-    "#     print(response)\n",
-    "#     try:\n",
-    "#         response_json = json.loads(response)  # Convert string to dictionary\n",
-    "#         print(response)\n",
-    "#         entities = response_json.get(\"names\", [])  # Now we can safely use .get()\n",
-    "#     except json.JSONDecodeError:\n",
-    "#         entities = []  # Handle the case where the response isn't valid JSON\n",
-    "\n",
-    "#     print(\"Retrieved Entities:\")\n",
-    "#     print(entities)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entities:\n",
-      "- Tools\n",
-      "- Technologies\n",
-      "- Resume\n",
-      "Retrieved Entities:\n",
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "# querying_ollama(\"Explain the tools and technologies in the resume\")"
    ]
   }
  ],
