--- a/pipeline_notebook/pipeline.ipynb
+++ b/pipeline_notebook/pipeline.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,94 +151,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total chunks created: 12\n",
+      "Total chunks created: 7\n",
       "\n",
       "Chunk 0:\n",
-      "Text Preview: AbhishekKakolla 20243Fri-2PM\n",
-      "EvaluatingtheEﬃciencyofSugarcaneandCornFlourasBiofuelsasAlternativestoF...\n",
-      "Keywords: ['rcaneandcornflourasbiofuelsasalternativestofossilfuels', 'roduction', 'rameforcompletefossilfueldepletionprojectedtobejustwithinthe', 'rﬁndingalternativestofossilfuelshas', 'remendouslyimportant']\n",
+      "Text Preview: Abi Kakolla \n",
+      "Toronto, ON | (647) 957-7403 | kakolla@usc.edu| linkedin.com/in/kakolla|kakolla.com \n",
+      " \n",
+      "...\n",
+      "Keywords: ['rvard', 'ring', 'rning', 'ral', 'ronto']\n",
       "Page Number: 0\n",
       "\n",
       "Chunk 1:\n",
-      "Text Preview: thereisanabsenceofoxygen.Theorganismconvertsacarbohydrate(suchascornorsugarcane)into\n",
-      "alcoholoranacid...\n",
-      "Keywords: ['rnorsugarcane', 'reisanabsenceofoxygen', 'rganismconvertsacarbohydrate', 'ranacid', 'romycescerevisiae']\n",
+      "Text Preview: ● Modeled in-silico layers of the Hippocampus used to generate a dendritic tree as part of a neural ...\n",
+      "Keywords: ['ral', 'ration', 'rate', 'rid', 'rating']\n",
       "Page Number: 0\n",
       "\n",
       "Chunk 2:\n",
-      "Text Preview: Thus,thisstudywillinvestigatetheeﬃcienciesofusingcornversussugarcaneasorganicsources\n",
-      "forethanolferme...\n",
-      "Keywords: ['rnversussugarcaneasorganicsources', 'rethanolfermentation', 'redictedthatsugarcanewillbemetabolizedintoethanolfasterthancorn', 'roducethemostcarbondioxidesincecornisknowntobeindigestiblebymanyorganisms', 'rdercarbohydratetobreakdown']\n",
-      "Page Number: 1\n",
+      "Text Preview: Lead Software Developer                  Nov 2021 - June 2022 \n",
+      "inLoop (sponsored by Deloitte)       ...\n",
+      "Keywords: ['ronto', 'red', 'ript', 'rebase', 'riving']\n",
+      "Page Number: 0\n",
       "\n",
       "Chunk 3:\n",
-      "Text Preview: 3. 4beakerswerepreparedwith1.5gramsofeachreactantcondition.Glucosewasusedasthe\n",
-      "positivecontrolasitis...\n",
-      "Keywords: ['rol', 'rswerepreparedwith1', 'ramsofeachreactantcondition', 'rolasitisaknowncarbohydratethatbecomesmetabolizedintoethanol', 'rolasitdoesnot']\n",
-      "Page Number: 1\n",
+      "Text Preview: PROJECTS                                                                                            ...\n",
+      "Keywords: ['rvard', 'rraform', 'ricks', 'raspberry', 'rest']\n",
+      "Page Number: 0\n",
       "\n",
       "Chunk 4:\n",
-      "Text Preview: 7. Thiswasrepeated3othertimesbyothergroupsforatotalof4trialsforeachcondition.\n",
-      "8. TherateandvolumeofC...\n",
-      "Keywords: ['riable', 'repeated3othertimesbyothergroupsforatotalof4trialsforeachcondition', 'rateandvolumeofco2', 'roduction', 'remeasuredovertime']\n",
-      "Page Number: 2\n",
+      "Text Preview: ● Implemented a Random Forest Classifier model in Databricks using Google Kubernetes Engine resource...\n",
+      "Keywords: ['rithm', 'react', 'rest', 'redictions', 'real']\n",
+      "Page Number: 0\n",
       "\n",
       "Chunk 5:\n",
-      "Text Preview: Figure2:AveragerateofCO2\n",
-      "productioninmLforeachconditionattheendofthe21minutes\n",
-      "Theaveragesandstandard...\n",
-      "Keywords: ['rol', 're2', 'ragerateofco2', 'roductioninmlforeachconditionattheendofthe21minutes', 'ragesandstandarddeviationsofalltrialsforeachconditionwerecomputedintable1']\n",
-      "Page Number: 3\n",
+      "Text Preview: Scribo – AI Email classifier app   github.com/kakolla/Scribo \n",
+      "Technologies: Python, Tkinter, Gmail A...\n",
+      "Keywords: ['ribo', 'rvised', 'read', 'ript', 'rning']\n",
+      "Page Number: 0\n",
       "\n",
       "Chunk 6:\n",
-      "Text Preview: Theresultshereareinteresting.First,itsupportsthehypothesisthatsugarcaneproducesthemost\n",
-      "CO2\n",
-      "andatthef...\n",
-      "Keywords: ['resultshereareinteresting', 'rst', 'rtsthehypothesisthatsugarcaneproducesthemost', 'ratesincetherateofco2', 'roductionwasgreaterinthesugarcaneconditionthanin']\n",
-      "Page Number: 4\n",
-      "\n",
-      "Chunk 7:\n",
-      "Text Preview: Accordingtotheliterature,juicescontainingfreesugarssuchasfructose,sucrose,andglucose,\n",
-      "provetobemoree...\n",
-      "Keywords: ['rdingtotheliterature', 'reesugarssuchasfructose', 'rose', 'rovetobemoreeﬃcientinproducingethanolcomparedtostarchysourceslikegrains', 'reesugarsolutionscanbeusedinfermentationwithoutprior']\n",
-      "Page Number: 4\n",
-      "\n",
-      "Chunk 8:\n",
-      "Text Preview: andoverallamountofproductionofcarbondioxide(whichistiedtoahigherethanolproduction).Firms\n",
-      "andscientis...\n",
-      "Keywords: ['rallamountofproductionofcarbondioxide', 'rethanolproduction', 'rms', 'rationwhenconsideringwhichbiofueltousetomaximize', 'rswitchingoutoffossilfuelsandminimizingenvironmentalharm']\n",
-      "Page Number: 4\n",
-      "\n",
-      "Chunk 9:\n",
-      "Text Preview: source.Otherstudieshaveshownthatwhilesugarcaneisaneﬃcientsourceforethanolfermentation,it\n",
-      "maynotbeeno...\n",
-      "Keywords: ['rce', 'rstudieshaveshownthatwhilesugarcaneisaneﬃcientsourceforethanolfermentation', 'replacefossilfuels', 'reexperimentsofthisareaofstudycanincludeinvestigatingtheeﬀectofthetypeofyeastor', 'riaonethanolfermentationasitisunclearatthismomentwhethersaccharomycescerevisiaeisthe']\n",
-      "Page Number: 5\n",
-      "\n",
-      "Chunk 10:\n",
-      "Text Preview: References\n",
-      "Bai,F.,Anderson,W.,&Moo-Young,M.(2007).Ethanolfermentationtechnologiesfromsugarand\n",
-      "starch...\n",
-      "Keywords: ['rel', 'riﬁcation', 'references', 'rson', 'rmentationtechnologiesfromsugarand']\n",
-      "Page Number: 6\n",
-      "\n",
-      "Chunk 11:\n",
-      "Text Preview: 1–15.https://doi.org/10.1155/2012/989572\n",
-      "Maicas,S.(2020).Theroleofyeastsinfermentationprocesses.Micr...\n",
-      "Keywords: ['roleofyeastsinfermentationprocesses', 'roorganisms', 'roorganisms8081142', 'rowncropsintheworld2021', 'roduced']\n",
-      "Page Number: 6\n"
+      "Text Preview: Tools: Git, Docker, Kubernetes, VS Code, Eclipse, Linux/Unix (Debian) \n",
+      "Technologies: Google Gemini, ...\n",
+      "Keywords: ['rnetes', 'ral', 'rduino', 'rks']\n",
+      "Page Number: 0\n"
      ]
     }
    ],
    "source": [
-    "pdf_path = \"paper.pdf\"\n",
+    "pdf_path = \"resume.pdf\"\n",
     "\n",
     "chunks = load_and_process_pdf(pdf_path)\n",
     "print(f\"Total chunks created: {len(chunks)}\")\n",
@@ -259,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -333,8 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 10/12 chunks\n",
-      "Processed 12/12 chunks\n"
+      "Processed 7/7 chunks\n"
      ]
     }
    ],
@@ -430,26 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'chunk_vector_index', 'type': 'VECTOR', 'labelsOrTypes': ['Chunk'], 'properties': ['embedding'], 'options': {'indexProvider': 'vector-2.0', 'indexConfig': {'vector.hnsw.m': 16, 'vector.hnsw.ef_construction': 100, 'vector.dimensions': 3072, 'vector.similarity_function': 'COSINE', 'vector.quantization.enabled': True}}}]\n",
-      "{'chunk_id': 16, 'source': 'bisc.pdf', 'page_number': 6, 'text_preview': 'Cleanup and Waste Disposal Instructions   \\n   \\n• Pour all non-hazardous liquid waste (milk and enzym...', 'full_text': 'Cleanup and Waste Disposal Instructions   \\n   \\n• Pour all non-hazardous liquid waste (milk and enzyme solutions) down the sink.   \\n  \\n• Remove all sharpie marks from test tubes and beakers with ethanol and paper towels.   \\n• Rinse, dry and leave them upside-down on you bench for the next lab section.   \\n  \\n• Discard used glucose strips and the blue pipette tips in the biohazard bin.   \\n  \\n• Wipe down the bench with Lysol and paper towels.', 'total_length': 442, 'score': 0.7241970300674438}\n",
-      "16\n",
-      "bisc.pdf\n",
-      "6\n",
-      "Cleanup and Waste Disposal Instructions   \n",
-      "   \n",
-      "• Pour all non-hazardous liquid waste (milk and enzym...\n",
-      "{'chunk_id': 1, 'source': 'Resume_Abi_Kakolla.pdf', 'page_number': 0, 'text_preview': '● Modeled in-silico layers of the Hippocampus used to generate a dendritic tree as part of a neural ...', 'full_text': '● Modeled in-silico layers of the Hippocampus used to generate a dendritic tree as part of a neural network using MeshLab and Python  \\n● Developed open-source software to grid a dataset of 6 million neural points that enhanced the neural mesh model resolution by 348%, \\nenabling other teams to create more accurate models and save on computational costs  \\n● Reduced neural network generation by 75% by integrating unsupervised machine learning algorithms, enabling faster simulations  \\n● Currently developing a Hybrid Retrieval-Augmented Generation (RAG) pipeline for research faculty integrating Graph retrieval agents \\nwith Neo4j and LangChain, and vector-based agents with Pinecone, to enable neuroscience-focused text and citation generation \\nLead Software Developer                  Nov 2021 - June 2022 \\ninLoop (sponsored by Deloitte)                                                                           Toronto, ON', 'total_length': 926, 'score': 0.7207645773887634}\n",
-      "1\n",
-      "Resume_Abi_Kakolla.pdf\n",
-      "0\n",
-      "● Modeled in-silico layers of the Hippocampus used to generate a dendritic tree as part of a neural ...\n"
+      "[{'name': 'chunk_vector_index', 'type': 'VECTOR', 'labelsOrTypes': ['Chunk'], 'properties': ['embedding'], 'options': {'indexProvider': 'vector-2.0', 'indexConfig': {'vector.hnsw.m': 16, 'vector.hnsw.ef_construction': 100, 'vector.dimensions': 3072, 'vector.similarity_function': 'COSINE', 'vector.quantization.enabled': True}}}]\n"
      ]
     }
    ],
@@ -514,9 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I don't know, there is no mention of a person's name in the provided text. \\n\\nThanks for asking!\""
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import Ollama\n",
@@ -562,7 +526,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"What were the disposal instructions in the lab report?\")"
+    "rag_chain.invoke(\"What is the person's name?\")"
    ]
   }
  ],
